--- a/css/2048_style.css
+++ b/css/2048_style.css
@@ -146,16 +146,16 @@ header .container {
 .tile-container {
   border-radius: 6px;
   position: relative;
-  width: 400px;
-  height: 400px;
+  width: 320px;
+  height: 320px;
 }
 
 .tile, .background {
   display: block;
   color: #F8FFE5;
   position: absolute;
-  width: 100px;
-  height: 100px;
+  width: 80px;
+  height: 80px;
   box-sizing: border-box;
   text-align: center;
 }
@@ -163,7 +163,7 @@ header .container {
 .background {
   z-index: 1;
   text-align: center;
-  border: 7px solid #9a9a95;
+  border: 4px solid #8d8d8d;
   background-color: #F8FFE5;
 }
 
@@ -186,7 +186,7 @@ header .container {
   -webkit-transition: 110ms ease-in-out;
   transition: 110ms ease-in-out;
   border-radius: 3px;
-  border: 7px solid #9a9a95;
+  border: 4px solid #8d8d8d;
   box-sizing: border-box;
 }
 .tile--4 {
